# daneel

./: .env.example  .gitignore  .markdownlint-cli2.yaml  BUILD_MVTMI.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DISCLAIMER.md  Dockerfile  ETHICS.md  LICENSE  LICENSE-APACHE  Makefile  ORIGIN.md  README.md  SECURITY.md  compose.yaml  docker-compose.yaml  docker-compose.yml  doorway-effect-research.yaml  references.yaml  rejected-references.yaml  start.sh  stop.sh  tarpaulin-report.html
.asimov/: ADRs.yaml  changelog.yaml  project.yaml  roadmap.yaml  warmup.json
.cargo/: audit.toml
blog/: hugo.toml
docs/: ARCHITECTURE_SPEC.md  BUILD_GUIDE.md  DATABASE_COMPARISON.md  DATABASE_RECOMMENDATION_MATRIX.md  OPERATIONS.md  README.md  SOCIAL_MEDIA_STRATEGY.md  memory-consolidation-integration.md
examples/: cognitive_loop_redis_test.rs  memory_consolidation.rs
models/: README.md  coordination-overhead.xlsx  game-theory-asi-race.xlsx  open-source-dominance.xlsx  resource-allocation-strategy.xlsx
origins/: ASI-Viability-Discussion.md  FOR_KANTIA.md  GROK_ANALYSIS.md  README.md  Rex-Claude-Dialogues.md  Rex-Grok-Dialogue-2025-12-16.md  Rex-Grok-Dialogue.md  TIMMY_BIRTH_CERTIFICATE.md  claude_to_grok.md  grok_to_timmy.md
paper/: DANEEL_PAPER.md  LINKEDIN_ARTICLE.md  PUBLISHING.md
research/: AI_REALITY.md  BRAIN_FUNCTIONAL_ALLOCATION_DATA.md  Context_Dependent_Memory_Research.yaml  Context_Dependent_Memory_Summary.md  Event_Segmentation_Theory_Research.md  LIFECORE_DANEEL_ANALYSIS.md  METHOD_OF_LOCI_RESEARCH.md  SLEEP_MEMORY_CONSOLIDATION.md  TMI_THOUGHT_MACHINE.md  (+6 more)
(+227 files in other folders)
